# StructTable

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/pdf2json-codegen/: SKILL.md
.claude/skills/pdf2json-run/: SKILL.md
.claude/skills/pdf2json-verify/: SKILL.md
.claude/skills/pdf2json-workspace/: SKILL.md
.claude/skills/structtable-codegen/: SKILL.md
.claude/skills/structtable-run/: SKILL.md
.claude/skills/structtable-verify/: SKILL.md
.claude/skills/structtable-workspace/: SKILL.md
app/: __init__.py  main.py  utils.py
app/pages/: compare.py  dashboard.py  history.py  results.py  upload_run.py
pipeline/: __init__.py  config.py  document_parser.py  llm_extractor.py  main.py  postprocess.py  utils.py
pipeline/pdf2markdown/: base.py  batch_convert.py  mineru.py  ocr_vl.py
