[project]
name = "pdf2json"
version = "1.0.0"
description = "Extract structured JSON from engineering quota/budget PDF tables using LLM"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ocr = [
    "PyMuPDF>=1.23",
]
dev = [
    "lxml>=5.0",
]

[project.scripts]
pdf2json = "pipeline.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
