[project]
name = "structtable"
version = "1.0.0"
description = "Extract structured JSON from PDF tables using LLM — generic table-to-JSON pipeline"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ocr = [
    "PyMuPDF>=1.23",
]
dev = [
    "lxml>=5.0",
]
ui = [
    "streamlit>=1.32",
]

[project.scripts]
structtable = "pipeline.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
